public: Move RelatedSearches; Fix Nav; etc.
- Move RelatedSearches to the empty area.
- Fixed nav layout issue; better on mobile
- Better mobilization all around.
- Adjusted layout of Settings modal.

--- a/public/styles/_overrides.scss
+++ b/public/styles/_overrides.scss
@@ -93,3 +93,15 @@
 		// }
 	}
 }
+
+.h-label, .h-label span {
+	color: var(--foreground) !important;
+	opacity: 0.8;
+}
+
+.h-select-trigger {
+	min-width: 6rem;
+	display: flex !important;
+	justify-content: space-between !important;
+	align-items: center !important;
+}
