--- a/public/styles/components/Navigation.scss
+++ b/public/styles/components/Navigation.scss
@@ -86,10 +86,25 @@ nav {
 		}
 
 		& .primary-grid-block {
-			align-items: center !important;
+			align-items: flex-start !important;
 			justify-content: center !important;
 			flex-direction: column !important;
-			padding: 0 2rem;
+			padding: 0 2rem 0 0.25rem;
 		}
+	}
+}
+
+@media only screen and (max-width: 550px) {
+	.nav-grid {
+		grid-template-columns: 1fr !important;
+	}
+	.settings-wrapper {
+		position: absolute;
+		top: 1rem;
+		right: 2rem;
+	}
+	.searchbar-container {
+		padding-left: 1.5rem;
+		max-width: none !important;
 	}
 }
