--- a/public/styles/components/Search.scss
+++ b/public/styles/components/Search.scss
@@ -89,13 +89,27 @@ $gutter: 0.6rem;
 	--result-gutter: 11rem;
 }
 
-.results {
+.search-panel {
 	width: 100%;
 	padding: 4rem var(--result-gutter);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-column-gap: 5rem;
+
+	&.no-grid {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+}
+
+@media only screen and (max-width: 1050px) {
+	.search-panel {
+		grid-template-columns: 1fr;
+		grid-template-rows: auto auto;
+		grid-row-gap: 3rem;
+	}
 }
 
 @media only screen and (max-width: 1600px) {
@@ -111,13 +125,13 @@ $gutter: 0.6rem;
 }
 
 @media only screen and (max-width: 800px) {
-	.results {
+	.search-panel {
 		padding: 4rem;
 	}
 }
 
 @media only screen and (max-width: 600px) {
-	.results {
+	.search-panel {
 		padding: 2rem 2rem;
 	}
 }
